--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,11 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - GurmanBookStore</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" /> <!--change name of bootstrap file-->
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
     <header>
+        <!--change navbar class light to dark and bg-white to primary -->
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-primary border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">GurmanBookStore</a>
@@ -36,7 +37,8 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <!--add text white 50 and bg-primary-->
+    <footer class="border-top footer text-white-50 bg-primary">
         <div class="container">
             &copy; 2023 - GurmanBookStore - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
